--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,8 @@ ContentModel=#css#
 ContentFormat=#text/css#
 [END_PAGE_INFO] --%> */
 
-
+/*本站的部分CSS基于tailwindCSS库实现，请使用tailwindCSS工程文件来维护*/
+/*项目地址：https://github.com/R6SWiki/HTMLFront*/
 
 /* @tailwind base; */
 @tailwind components;
