补充html的字体尺寸

--- a/src/style.css
+++ b/src/style.css
@@ -39,9 +39,9 @@ video {
 } */
 
 
-/* html{
+html{
     font-size: 10px;
-} */
+}
 
 /* 愚人节彩蛋 */
 div.formalentry-content.yurenjie span a.external.text:hover::after{
