--- a/src/style.css
+++ b/src/style.css
@@ -50,6 +50,8 @@ html{
     font-size: 10px;
 }
 
+
+
 /* 2022愚人节彩蛋 */
 div.formalentry-content.yurenjie span a.external.text:hover::after{
     content:"（你被骗了！）"
@@ -65,53 +67,43 @@ div.formalentry-content.yurenjie span a.external.text:hover::after{
 
 
 /* 特勤干员首页效果 */
+body.page-特勤干员 section.body{
+    @apply !bg-transparent
+}
   div.operators-table div.operators-cell span.cordname{
       @apply bg-default block py-2 text-center text-4xl uppercase italic h-[20%];
     }
     
     div.operators-table div.operators-cell:hover span.cordname{
-        @apply  md:bg-cyan font-bold shadow-xl ;
+        @apply  md:bg-cyan duration-300 font-bold shadow-xl ;
     
     }
-
-
 div.operators-table div.operators-cell{
-    @apply relative flex flex-col ease-in duration-200 bg-white/[.15]  text-[#24262a] m-1 w-[calc(25%_-_10px)] md:w-[calc(12.5%_-_10px)] lg:w-[calc(w1/12-10px)];
+    @apply relative flex flex-col ease-in-out transition-all hover:shadow-lg z-10 hover:md:scale-115 duration-300 bg-white/[.15]  text-[#24262a] m-2 w-[calc(25%_-_10px)] md:w-[calc(16.6%_-_10px)] lg:w-[calc(12.5%_-_10px)] lg:w-[calc(w1/12-10px)] hover:bg-[#2499ff] hover:shadow-black;
     /* width:calc(12.5% - 10px); */
 }
-
 div.operators-table div.operators-cell a:nth-child(2){
-    @apply absolute left-1/3 w-1/3 h-auto right-auto top-[60%];
+    @apply absolute left-1/4 w-1/2 h-auto right-auto top-[50%];
 
 }
-
 div.operators-table div.operators-cell:hover a:nth-child(2){
-    @apply  transition-opacity duration-200 ease-in opacity-0;
-}
-
-
-
-div.operators-table div.operators-cell:hover{
-    @apply shadow-lg transition-colors transition-transform shadow-bordercolor z-10 bg-[#2499ff] md:scale-115;
+    @apply  transition-opacity duration-300 ease-out md:opacity-0;
 }
 
 div.operators-table div.operators-cell:hover p{
     @apply md:opacity-100
 }
-
 div.operators-table img.camp-icon{
     vertical-align: -1px;
 }
-
 div.operators-table div.operators-cell p{
     @apply absolute align-bottom text-default h-[40%] w-full 
     bottom-[25%] md:bottom-[20%] xl:bottom-[15%] 
      text-lg md:text-xl lg:text-2xl
       pl-2 pb-2 
-     transition-opacity md:opacity-0 pointer-events-none;
+     transition-opacity opacity-0 pointer-events-none;
     filter: drop-shadow(0px 0px 4px black) drop-shadow(0px 0px 4px black);
 }
-
 div.operators-table div.operators-cell p span{
     @apply block text-base md:text-lg lg:text-xl;
 }
