增加纪念逝世社区玩家的页面黑白效果

--- a/src/style.css
+++ b/src/style.css
@@ -298,7 +298,7 @@ div.infobox-gun div.titlebox div.triangle-b{
 }
 
 
-body.page-KiXSTAr{
+body.page-KiXSTAr,body.page-Kixstar,body.page-iceycat25{
     filter: grayscale(100%);
 }
 
